--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Dr. Fabiano Menegidio"
-description              : "Academic Personal Homepage."
+description              : "Academic Personal Site"
 repository               : "fabianomenegidio/fabianomenegidio.github.io"
 google_scholar_stats_use_cdn : true
 
