--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Fabiano Menegidio"
+  name             : "Dr. Fabiano Menegidio"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Bioinformatician"
   location         : "Mogi das Cruzes, SP, Brazil"
