--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Bioinformatician"
   employer         : "LaBiOmicS"
-  location         : "Mogi das Cruzes, SP, Brazil"
+  location         : "Mogi das Cruzes, Brazil"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "fabiano.menegidio@bioinformatica.com.br"
